// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Media Share Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-social-media-share ecl-social-media-share--null"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <p
      class="ecl-social-media-share__description"
    >
      Share this page
    </p>
    <ul
      class="ecl-social-media-share__list"
    >
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#twitter-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#facebook-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#instagram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#linkedin-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#telegram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#share"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Other social networks
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Share Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-social-media-share ecl-social-media-share--null custom-class custom-class--test"
  >
    <p
      class="ecl-social-media-share__description"
    >
      Share this page
    </p>
    <ul
      class="ecl-social-media-share__list"
    >
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#twitter-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#facebook-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#instagram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#linkedin-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#telegram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#share"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Other social networks
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;

exports[`Social Media Share Default view renders correctly 1`] = `
<jest>
  <div
    class="ecl-social-media-share ecl-social-media-share--null"
  >
    <p
      class="ecl-social-media-share__description"
    >
      Share this page
    </p>
    <ul
      class="ecl-social-media-share__list"
    >
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#twitter-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#facebook-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#instagram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#linkedin-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icon-social-media.svg#telegram-color"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Telegram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-share__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-share__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#share"
            />
          </svg>
          <span
            class="ecl-link__label"
          >
            Other social networks
          </span>
        </a>
      </li>
    </ul>
  </div>
</jest>
`;
